--- a/getting-started/options.html
+++ b/getting-started/options.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>History</h1>
+    <button id="clearHistory">Clear History</button>
     <table id="messageTable" class="searchable sortable" >
       <thead>
         <tr>
