--- a/getting-started/options.html
+++ b/getting-started/options.html
@@ -3,22 +3,26 @@
   <head>
     <title>History Extension</title>
     <link rel="stylesheet" href="options.css">
+    <link rel="stylesheet" href="nav.css">
   </head>
   <body>
-    <h1>History</h1>
-    <button id="clearHistory">Clear History</button>
-    <table id="messageTable" class="searchable sortable" >
-      <thead>
-        <tr>
-            <th>Number</th>
-            <th>URL</th>
-            <th>Start Time</th>
-            <th>End Time</th>
-        </tr>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
+    <script id="replace_with_navbar" src="nav.js"></script>
+    <div class="content">
+      <h1>History</h1>
+      <button id="clearHistory">Clear History</button>
+      <table id="messageTable" class="searchable sortable" >
+        <thead>
+          <tr>
+              <th>Number</th>
+              <th>URL</th>
+              <th>Start Time</th>
+              <th>End Time</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+    </div>
   </body>
   <script defer src="options.js"></script>
 </html>
