--- a/getting-started/options/home.html
+++ b/getting-started/options/home.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>History Extension</title>
-    <link rel="stylesheet" href="options.css">
+    <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="nav.css">
   </head>
   <body>
@@ -24,5 +24,5 @@
       </table>
     </div>
   </body>
-  <script defer src="options.js"></script>
+  <script defer src="home.js"></script>
 </html>
