Added active tab highlighting
Kind of messy though.

--- a/getting-started/options/nav.html
+++ b/getting-started/options/nav.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="navbar sticky" id="navbar">
-    <a class="active" href="home.html"><i class="fa fa-fw fa-home"></i> Home</a>
-    <a href="stats.html"><i class="fa fa-fw fa-calculator"></i> Stats</a>
+    <a class="tablink active" id="home" href="home.html"><i class="fa fa-fw fa-home"></i> Home</a>
+    <a class="tablink" id="stats" href="stats.html"><i class="fa fa-fw fa-calculator"></i> Stats</a>
 </div>
