--- a/getting-started/options/stats.html
+++ b/getting-started/options/stats.html
@@ -8,8 +8,20 @@
   <body>
     <script id="replace_with_navbar" src="nav.js"></script>
     <div class="content">
-        <h1>HELLOOOO</h1>
+        <h1>HELLO</h1>
         <!-- content here -->
+        <table id="timeTable" class="searchable sortable" >
+          <thead>
+            <tr>
+                <th>URL</th>
+                <th>Total Time</th>
+                <th>Total Time</th>
+                <th>Total Time</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
     </div>
   </body>
   <script defer src="stats.js"></script>
