--- a/getting-started/options/stats.html
+++ b/getting-started/options/stats.html
@@ -8,13 +8,13 @@
   <body>
     <script id="replace_with_navbar" src="nav.js"></script>
     <div class="content">
-        <h1>HELLO</h1>
-        <!-- content here -->
+        <h2>Time Table</h2>
+        <h4>Aggregate amount of time on each URL</h4>
         <table id="timeTable" class="searchable sortable" >
           <thead>
             <tr>
                 <th>URL</th>
-                <th>Total Time</th>
+                <th>Total Time (h:m:s)</th>
             </tr>
           </thead>
           <tbody>
